--- a/app-tracker-student/app/src/main/res/layout/activity_edit_profile.xml
+++ b/app-tracker-student/app/src/main/res/layout/activity_edit_profile.xml
@@ -26,7 +26,7 @@
         android:layout_marginTop="30dp"
         android:layout_marginEnd="142dp"
         android:fontFamily="@font/roboto"
-        android:text="Edit Profile"
+        android:text="@string/itemEditProfile"
         android:textColor="#004D40"
         android:textSize="25sp"
         android:textStyle="bold"
