--- a/app-tracker-teacher/app/src/main/res/layout/activity_single_meeting_view.xml
+++ b/app-tracker-teacher/app/src/main/res/layout/activity_single_meeting_view.xml
@@ -145,15 +145,26 @@
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
-    <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/studentListRecyclerView"
+    <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
+        android:id="@+id/refreshLayout"
+
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="300dp"
+
         android:layout_marginTop="37dp"
         android:paddingStart="20dp"
         android:paddingEnd="20dp"
         app:layout_constraintTop_toBottomOf="@+id/tvMeetingCode"
-        tools:layout_editor_absoluteX="0dp" />
+        app:layout_constraintBottom_toTopOf="@id/btnDelete"
+        tools:layout_editor_absoluteX="0dp">
+
+        <androidx.recyclerview.widget.RecyclerView
+            android:id="@+id/studentListRecyclerView"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content" />
+
+    </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
+
 
     <Button
         android:id="@+id/btnDelete"
@@ -165,6 +176,6 @@
         android:text="Delete meeting"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/studentListRecyclerView" />
+        app:layout_constraintTop_toBottomOf="@id/refreshLayout" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
