--- a/app-tracker-teacher/app/src/main/res/layout/activity_edit_profile.xml
+++ b/app-tracker-teacher/app/src/main/res/layout/activity_edit_profile.xml
@@ -63,6 +63,7 @@
 
     <EditText
         android:id="@+id/inputFirstName"
+        android:inputType="textPersonName"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginStart="24dp"
@@ -79,6 +80,7 @@
 
     <EditText
         android:id="@+id/inputLastName"
+        android:inputType="textPersonName"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginStart="24dp"
