--- a/app-tracker-teacher/app/src/main/res/values/colors.xml
+++ b/app-tracker-teacher/app/src/main/res/values/colors.xml
@@ -3,6 +3,7 @@
     <color name="purple_200">#FFBB86FC</color>
     <color name="light_green">#00a357</color>
     <color name="dark_green">#00703c</color>
+    <color name="dark_greenv2">#004D40</color>
     <color name="teal_200">#FF03DAC5</color>
     <color name="teal_700">#FF018786</color>
     <color name="black">#FF000000</color>
