--- a/app-tracker-student/app/src/main/res/layout/activity_login.xml
+++ b/app-tracker-student/app/src/main/res/layout/activity_login.xml
@@ -7,6 +7,20 @@
     tools:context=".LoginActivity">
 
 
+    <TextView
+        android:id="@+id/tvForStudents"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:fontFamily="@font/roboto_medium"
+        android:shadowColor="#FFFFFF"
+        android:text="FOR STUDENTS"
+        android:textColor="#009688"
+        android:textSize="20sp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.498"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/tvAppName" />
+
     <ImageView
         android:id="@+id/ivIcon"
         android:layout_width="90dp"
@@ -45,7 +59,7 @@
         android:textAlignment="center"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/tvAppName" />
+        app:layout_constraintTop_toBottomOf="@+id/tvForStudents" />
 
     <Button
         android:id="@+id/btnRegister"
@@ -82,5 +96,6 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/inputPassword" />
+
 
 </androidx.constraintlayout.widget.ConstraintLayout>
