--- a/app-tracker-teacher/app/src/main/res/layout/activity_accept_students.xml
+++ b/app-tracker-teacher/app/src/main/res/layout/activity_accept_students.xml
@@ -21,11 +21,17 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
-    <androidx.recyclerview.widget.RecyclerView
+    <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         app:layout_constraintTop_toBottomOf="@id/tvAcceptStudentsHeader"
-        android:id="@+id/acceptStudentsRecyclerView"
-        />
+        android:id="@+id/refreshLayout"
+        >
+
+        <androidx.recyclerview.widget.RecyclerView
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:id="@+id/acceptStudentsRecyclerView"/>
+    </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
