edited some views added loading in classlist

--- a/app-tracker-teacher/app/src/main/res/layout/activity_create_meeting_view.xml
+++ b/app-tracker-teacher/app/src/main/res/layout/activity_create_meeting_view.xml
@@ -14,9 +14,9 @@
         android:layout_marginTop="200dp"
         android:layout_marginEnd="103dp"
         android:fontFamily="@font/roboto"
-        android:text="CREATE MEETING"
+        android:text="Create Meeting"
         android:textColor="#004D40"
-        android:textSize="24sp"
+        android:textSize="34sp"
         android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.444"
