--- a/app-tracker-teacher/app/src/main/res/layout/activity_accept_students.xml
+++ b/app-tracker-teacher/app/src/main/res/layout/activity_accept_students.xml
@@ -12,7 +12,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="100dp"
         android:fontFamily="@font/roboto"
-        android:text="Join requests"
+        android:text="Requests to join the Course"
         android:textColor="#004D40"
         android:textSize="27sp"
         android:textStyle="bold"
