--- a/app-tracker-teacher/app/src/main/res/layout/activity_classlist.xml
+++ b/app-tracker-teacher/app/src/main/res/layout/activity_classlist.xml
@@ -20,13 +20,18 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
-    <androidx.recyclerview.widget.RecyclerView
+    <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:id="@+id/classListRecyclerView"
         app:layout_constraintTop_toBottomOf="@id/txtClassList"
-        android:padding="15dp"
-        />
+        android:id="@+id/refreshLayout">
+
+        <androidx.recyclerview.widget.RecyclerView
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:id="@+id/classListRecyclerView"
+            android:padding="15dp" />
+    </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
