--- a/app-tracker-student/app/src/main/res/layout/activity_edit_account_security.xml
+++ b/app-tracker-student/app/src/main/res/layout/activity_edit_account_security.xml
@@ -11,10 +11,10 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="148dp"
-        android:layout_marginTop="30dp"
+        android:layout_marginTop="50dp"
         android:layout_marginEnd="142dp"
         android:fontFamily="@font/roboto"
-        android:text="Account security"
+        android:text="Account Security"
         android:textColor="#004D40"
         android:textSize="25sp"
         android:textStyle="bold"
