--- a/app-tracker-teacher/app/src/main/res/layout/activity_accept_students.xml
+++ b/app-tracker-teacher/app/src/main/res/layout/activity_accept_students.xml
@@ -22,16 +22,16 @@
         app:layout_constraintTop_toTopOf="parent" />
 
     <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        app:layout_constraintTop_toBottomOf="@id/tvAcceptStudentsHeader"
         android:id="@+id/refreshLayout"
-        >
+        android:layout_width="wrap_content"
+        android:layout_height="0dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/tvAcceptStudentsHeader">
 
         <androidx.recyclerview.widget.RecyclerView
+            android:id="@+id/acceptStudentsRecyclerView"
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:id="@+id/acceptStudentsRecyclerView"/>
+            android:layout_height="wrap_content" />
     </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
