--- a/app-tracker-teacher/app/src/main/res/layout/layout_course_request.xml
+++ b/app-tracker-teacher/app/src/main/res/layout/layout_course_request.xml
@@ -10,14 +10,14 @@
         android:id="@+id/cardAcceptStudents"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginStart="5dp"
+        android:layout_marginStart="5sp"
 
-        android:layout_marginTop="5dp"
-        android:layout_marginEnd="5dp"
-        android:layout_marginBottom="5dp"
+        android:layout_marginTop="1sp"
+        android:layout_marginEnd="5sp"
+        android:layout_marginBottom="1sp"
         app:cardBackgroundColor="@color/white"
         app:cardCornerRadius="14dp"
-        app:cardElevation="5dp"
+        app:cardElevation="1sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
