--- a/app-tracker-student/app/src/main/res/layout/activity_search_course.xml
+++ b/app-tracker-student/app/src/main/res/layout/activity_search_course.xml
@@ -29,6 +29,7 @@
         android:layout_marginTop="25dp"
         android:layout_marginEnd="50dp"
         android:hint="Course Code"
+        android:textAlignment="center"
         android:minHeight="48dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -41,6 +42,7 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="50dp"
         android:layout_marginEnd="50dp"
+        android:textAlignment="center"
         android:hint="Section Code"
         android:minHeight="48dp"
         app:layout_constraintEnd_toEndOf="parent"
