adjusted view and added constraints

--- a/app-tracker-teacher/app/src/main/res/layout/activity_accept_students.xml
+++ b/app-tracker-teacher/app/src/main/res/layout/activity_accept_students.xml
@@ -10,12 +10,14 @@
         android:id="@+id/tvAcceptStudentsHeader"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="100dp"
+        android:layout_marginTop="50dp"
+        android:layout_marginBottom="10dp"
         android:fontFamily="@font/roboto"
         android:text="Requests to join the Course"
         android:textColor="#004D40"
         android:textSize="27sp"
         android:textStyle="bold"
+        app:layout_constraintBottom_toTopOf="@+id/refreshLayout"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.497"
         app:layout_constraintStart_toStartOf="parent"
