--- a/app-tracker-student/app/src/main/res/layout/activity_registration_view.xml
+++ b/app-tracker-student/app/src/main/res/layout/activity_registration_view.xml
@@ -27,11 +27,23 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="14dp"
-        android:layout_marginTop="52dp"
+        android:layout_marginTop="32dp"
         android:layout_marginEnd="69dp"
         android:text="register"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toEndOf="@+id/btnCancelRegistration"
+        app:layout_constraintTop_toBottomOf="@+id/inputIdNumber" />
+
+    <Button
+        android:id="@+id/btnCancelRegistration"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="68dp"
+        android:layout_marginTop="32dp"
+        android:backgroundTint="@color/gray"
+        android:text="@android:string/cancel"
+        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/inputIdNumber" />
 
     <EditText
@@ -105,16 +117,5 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
-
-    <Button
-        android:id="@+id/btnCancelRegistration"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="69dp"
-        android:layout_marginTop="52dp"
-        android:backgroundTint="@color/gray"
-        android:text="@android:string/cancel"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/inputIdNumber" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
