--- a/app-tracker-teacher/app/src/main/res/layout/activity_registration_view.xml
+++ b/app-tracker-teacher/app/src/main/res/layout/activity_registration_view.xml
@@ -14,12 +14,12 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="40dp"
         android:background="@drawable/custom_input"
-        android:backgroundTint="#FFFFFF"
         android:drawableStart="@drawable/ic_person"
         android:hint="first name"
         android:inputType="textPersonName"
         android:padding="10dp"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.491"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/techerRegistrationHeader" />
 
